--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,6 @@
 {
-  "outputDirectory": "src"
+  "cleanUrls": true,
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
 }
