fix: use npx for build command

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "npx -y vite",
-    "build": "vite build",
+    "build": "npx -y vite build",
     "preview": "npx -y vite preview"
   }
 }
